# qsimavr

./: .gitignore  AUTHORS  CMakeLists.txt  GNUmakefile  README  TODO  qsimavr.pro
EepromComponent/: CMakeLists.txt  EepromComponent.pro  FEATURES  eepromfactory.cpp  eepromfactory.h  eepromgui.cpp  eepromgui.h  eepromgui.ui  eepromlogic.cpp  eepromlogic.h
Examples/: CMakeLists.txt
Examples/Eeprom/: CMakeLists.txt  Makefile  atmega1280_i2ctest.c
Examples/Glcd/: CMakeLists.txt  Makefile  doxyfile
Examples/Glcd/src/: common.h  glcd.c  glcd.h  glcd_hal.c  glcd_hal.h  lcd.c  lcd.h  main.c  pong.c  pong.h  timer.c  timer.h  uart.c  uart.h  uart_streams.c  uart_streams.h  util.h
Examples/LcdLeds/: CMakeLists.txt  Makefile  atmega1280_charlcd.c  avr_hd44780.c  avr_hd44780.h  avr_hd44780_conf.h
Examples/Temperature/: CMakeLists.txt  Makefile  createLcdDriver.sh  ds18x20.c  ds18x20.h  main.c  one_wire.c  one_wire.h  onewire.c  onewire.h  temperature_control.c  temperature_control.h  uart.c
Examples/Temperature/src/: char_display.c  char_display.h  one_wire.c  temp_sensor.c  temp_sensor.h  temperature_control.c  uart.h  util.c  util.h
GlcdComponent/: BUGS  CMakeLists.txt  FEATURES  GlcdComponent.pro  GlcdComponent_global.h  glcdfactory.cpp  glcdfactory.h  glcdgraphicsscene.cpp  glcdgraphicsscene.h  glcdgui.cpp  glcdgui.h  glcdgui.ui  glcdlogic.cpp  glcdlogic.h  nt7108.cpp  nt7108.h  touchscreen.cpp  touchscreen.h
LcdComponent/: CMakeLists.txt  FEATURES  LcdComponent.pro  MISSING  hd44780.c  hd44780.h  lcdfactory.cpp  lcdfactory.h  lcdgui.cpp  lcdgui.h  lcdgui.ui  lcdlogic.cpp  lcdlogic.h
LedButtonsComponent/: CMakeLists.txt  LedButtonsComponent.pro  ledbuttonfactory.cpp  ledbuttonfactory.h  ledbuttonsgui.cpp  ledbuttonsgui.h  ledbuttonsgui.ui  ledbuttonslogic.cpp  ledbuttonslogic.h
QHexEdit2/: CMakeLists.txt
QSimAVR/: CMakeLists.txt  QSimAVR.pro  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  component.c  component.cpp  component.h  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pluginmanager.cpp  pluginmanager.h  pluginswindow.cpp  pluginswindow.h  pluginswindow.ui  plugintablemodel.cpp  plugintablemodel.h  qsimavr.qrc  recentfiles.cpp  recentfiles.h  simavr.cpp  simavr.h  temperature.vcd
RtcComponent/: BUGS  CMakeLists.txt  FEATURES  RtcComponent.pro  RtcComponent_global.h  rtcfactory.cpp  rtcfactory.h  rtcgui.cpp  rtcgui.h  rtcgui.ui  rtclogic.cpp  rtclogic.h
TemperatureComponent/: CMakeLists.txt  ds1820.cpp  ds1820.h  temperaturefactory.cpp  temperaturefactory.h  temperaturegui.cpp  temperaturegui.h  temperaturegui.ui  temperaturelogic.cpp  temperaturelogic.h
TwiComponent/: CMakeLists.txt  TwiComponent.pro  TwiComponent_global.h  twicomponent.cpp  twicomponent.h
